NXP-23757: Clean code and format